service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: file-server
spec:
  selector:
    app: file-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-port
  - name: rsync
    protocol: TCP
    port: 873
    targetPort: rsync-port
