route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: file-server
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: file-server
